src/styles/pages/_home.scss
@use '../abstract/functions' as functions;
@use '../abstract/mixin' as mixin;

.view--home {
  position: relative;
  display: flex;
  align-items: center;
  min-height: 100vh;
  overflow: hidden;
  background-color: var(--color-bg);
}


.home {
  &__content {
    position: relative;
    z-index: 1;
    padding: functions.px-to-rem(80) functions.px-to-rem(64);
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    gap: functions.px-to-rem(24);

    @include mixin.respond(sm) {
      padding: functions.px-to-rem(40) functions.px-to-rem(24);
    }
  }

  &__subtitle {
    font-size: functions.px-to-rem(18);
    color: var(--color-text);
    opacity: 0.7;
  }

  &__title {
    font-size: functions.px-to-rem(96);
    font-weight: 800;
    color: var(--color-text);
    line-height: 1.1;

    @include mixin.respond(sm) {
      font-size: functions.px-to-rem(48);
    }
  }

  &__bg-icon {
    position: absolute;
    bottom: -5%;
    left: -2%;
    width: functions.px-to-rem(500);
    height: auto;
    pointer-events: none;

    @include mixin.respond(sm) {
      width: functions.px-to-rem(300);
    }
  }
}

.btn-home-play {
  align-self: center;
  background: none;
  border: none;
  padding: 0;
  cursor: pointer;
  transition: opacity 0.2s ease, transform 0.1s ease;

  &__image {
    display: block;
    height: functions.px-to-rem(60);
    width: auto;

    @include mixin.respond(sm) {
      height: functions.px-to-rem(48);
    }
  }

  &:hover {
    opacity: 0.9;
  }

  &:active {
    transform: scale(0.97);
  }
}

